--- a/index.html
+++ b/index.html
@@ -19,9 +19,47 @@
   <!-- poppins -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- stylesheet -->
+  <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
-  
+
+  <!-- nav bar starts -->
+  <header>
+  <div class="navbar bg-base-100 shadow-sm flex lg:justify-between">
+  <div class="navbar-start">
+    <a class="text-xl text-indigo-700 font-bold" href="">SwiftCart</a>
+  </div>
+  <div class="navbar-center hidden lg:flex text-indigo-500 font-bold">
+    <ul class="menu menu-horizontal px-1">
+      <li><button onclick="homeComing()"><a href="#">Home</a></button></li>
+      <li><button onclick="productsLoading()"><a href="#">Products</a></button></li>
+      <li><button><a href="#">About</a></button></li>
+      <li><button><a href="#">Contacts</a></button></li>
+    </ul>
+  </div>
+  <div class="navbar-end">
+     <a class="btn "><i class="fa-solid fa-cart-shopping"></i></a>
+     <div class="dropdown">
+      <div tabindex="0" role="button" class="btn btn-ghost mr-5 lg:hidden">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /> </svg>
+      </div>
+      <ul
+        tabindex="-1"
+        class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
+      <li><button onclick="homeComing()"><a href="#">Home</a></button></li>
+      <li><button onclick="productsLoading()"><a href="#">Products</a></button></li>
+      <li><button><a href="#">About</a></button></li>
+      <li><button><a href="#">Contacts</a></button></li>
+        
+      </ul>
+    </div>
+   
+  </div>
+</div>
+
+  </header>
+  <!-- nav bar ends -->
 </body>
 </html>
