hero section, why us section, trending section interface complete

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SwiftCraft</title>
   <!-- favicon -->
-  <link rel="shortcut icon" href="./mission-restart-a6-main/Assets/swift-craft.png" type="image/x-icon">
+   <link rel="shortcut icon" href="./mission-restart-a6-main/Assets/swift-craft.png" type="image/x-icon">
  
 <!-- font awesome cdn -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -61,5 +61,68 @@
 
   </header>
   <!-- nav bar ends -->
+   <!-- hero section starts -->
+<section id="hero-section">
+  <div
+  class="hero min-h-screen"
+  style="background-image: url(mission-restart-a6-main/Assets/banner-image.png);">
+    <div class="hero-overlay"></div>
+    <div class=" hero-content text-neutral-content text-left lg:text-left">
+    <div class="max-w-md ">
+      <h1 class="m-5 text-4xl font-bold ">Best Collection For You</h1>
+      <p class="m-5">
+     Discover the latest trends in fashion, electronics and more.Shop with confidence and style at SwiftCart.
+      </p>
+      <button class="btn btn-primary m-5">Shop Now</button>
+    </div>
+  </div>
+</div>
+</section>
+<!-- hero section ends -->
+  <!-- why us section starts -->
+<section id="why-us" class="flex-col justify-items-center mt-3">
+  <h1 class="font-bold text-center">Why choose us</h1>
+  <p class="text-center">We provide the best exprience with top-notch services</p>
+ 
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 p-10 max-w-7xl mx-auto">
+      <div class="card bg-base-100 shadow-md border border-gray-100">
+        <div class="card-body items-center text-center">
+          <i class="fa-regular fa-truck text-2xl mb-2"></i>
+          <h2 class="card-title text-sm lg:text-base">Card title!</h2>
+          <p class="text-xs text-gray-500">A card component has a figure, a body part, and inside body.</p>
+        </div>
+      </div>
+      <div class="card bg-base-100 shadow-md border border-gray-100">
+        <div class="card-body items-center text-center">
+          <i class="fa-regular fa-headphones text-2xl mb-2"></i>
+          <h2 class="card-title text-sm lg:text-base">24/7 Support</h2>
+          <p class="text-xs text-gray-500">Our support team is available around the clock to  assist you.</p>
+        </div>
+      </div>
+      <div class="card bg-base-100 shadow-md border border-gray-100">
+        <div class="card-body items-center text-center">
+          <i class="fa-solid fa-user-shield text-2xl mb-2"></i>
+          <h2 class="card-title text-sm lg:text-base">Secure Payment</h2>
+          <p class="text-xs text-gray-500">Experience safe and secure transactions with encryption.</p>    
+        </div>
+      </div>
+      <div class="card bg-base-100 shadow-md border border-gray-100">
+        <div class="card-body items-center text-center">
+          <i class="fa-solid fa-repeat text-2xl mb-2"></i>
+          <h2 class="card-title text-sm lg:text-base">Easy Returns</h2>
+          <p class="text-xs text-gray-500">Not satisfied? Return your products easily within 30 days.</p>
+        </div>
+      </div>
+    </div> 
+  </section>
+ <!-- why us section ends -->
+
+<!-- trending now section starts -->
+ <section id="trending">
+  <h3 class="font-bold text-2xl pl-8">Trending Now</h3>
+  <div class="bg-gray-100 p-8 min-h-screen">
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-6 max-w-6xl mx-auto" id="tredProducts">
+ </section>
+<!-- trending now section ends -->
 </body>
 </html>
