--- a/index.html
+++ b/index.html
@@ -124,5 +124,104 @@
   <div class="grid grid-cols-1 md:grid-cols-3 gap-6 max-w-6xl mx-auto" id="tredProducts">
  </section>
 <!-- trending now section ends -->
+
+<!-- footer section starts  -->
+
+<footer class="bg-slate-900 text-gray-400 flex flex-col gap-3 p-8 ">
+ <!-- <section class="flex flex-col gap-10 lg:flex-row justify-between ">
+  <div>
+   <h3 class="text-indigo-800 font-bold">SwiftCart</h3>
+    <p class="text-[.8rem]">Your one-stop shop for all your fashion and lifestyle needs.Quality products fast delivery and excellent support.</p>
+ </div>
+  <div>
+    <ul>QUICK LINKS
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Products</a> </li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contacts</a></li>
+    </ul>
+  </div>
+  <div>
+    <ul>
+    <a href="#">SUPPORT</a>
+    <li><a href="#">FAQ</a> </li>
+    <li><a href="#">Shipping</a></li>
+    <li><a href="#">Returns</a></li>
+    <li><a href="#">Privacy Policy</a></li>
+    </ul>
+  
+  </div>
+  <div>
+    <h3>SUBSCRIBE TO OUR NEWSLETTER</h3>
+    <p class="text-[.8rem]">The latest news,articles and resources sent to your inbox weekly.</p>
+    <div class="flex flex-col gap-3">
+      <input class="bg-amber-100 text-gray-900" type="email" placeholder="Enter your email" id="user-email">
+      <button class="btn btn-primary">Subscribe</button>
+    </div>
+  </div>
+ </section> -->
+<section class="flex flex-col lg:flex-row justify-between gap-3">
+  
+  <div class="max-w-xs">
+    <h3 class="text-indigo-500 font-bold text-2xl mb-4">SwiftCart</h3>
+    <p class="text-[.85rem] ">
+      Your one-stop shop for all your fashion and lifestyle needs. Quality products, fast delivery, and excellent support.
+    </p>
+  </div>
+
+  <div>
+    <h4 class="text-white font-semibold text-sm mb-4">QUICK LINKS</h4>
+    <ul class="space-y-2 text-[.85rem]">
+      <li><a href="#" class="hover:text-white">Home</a></li>
+      <li><a href="#" class="hover:text-white">Products</a></li>
+      <li><a href="#" class="hover:text-white">About</a></li>
+      <li><a href="#" class="hover:text-white">Contact</a></li>
+    </ul>
+  </div>
+
+  <div>
+    <h4 class="text-white font-semibold text-sm mb-4">SUPPORT</h4>
+    <ul class="space-y-2 text-[.85rem]">
+      <li><a href="#" class="hover:text-white">FAQ</a></li>
+      <li><a href="#" class="hover:text-white">Shipping</a></li>
+      <li><a href="#" class="hover:text-white">Returns</a></li>
+      <li><a href="#" class="hover:text-white">Privacy Policy</a></li>
+    </ul>
+  </div>
+
+  <div class="max-w-sm">
+    <h4 class="text-white font-semibold text-sm mb-4 uppercase">Subscribe to our newsletter</h4>
+    <p class="text-[.85rem] mb-6">The latest news, articles, and resources, sent to your inbox weekly.</p>
+    
+    <div class="flex flex-col sm:flex-row gap-2">
+      <input 
+        class="bg-white text-gray-900 px-4 py-2 rounded-md w-full" 
+        type="email" 
+        placeholder="Enter your email" 
+        id="user-email"
+      >
+      <button class="bg-indigo-600 text-white px-6 py-2 rounded-md font-medium hover:bg-indigo-700 ">
+        Subscribe
+      </button>
+    </div>
+  </div>
+
+</section>
+
+
+
+  <hr>
+  <div class="flex flex-col-reverse lg:flex-row lg:justify-between">
+    <p>&copy; 2025 SwiftCraft, Inc. All rights reserved</p>
+    <div>
+      <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+      <a href="#"><i class="fa-brands fa-twitter"></i></a>
+      <a href="#"><i class="fa-brands fa-instagram"></i></a>
+      <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+      <a href="#"><i class="fa-regular fa-envelope"></i></a>
+    </div>
+  </div>
+</footer>
+<!-- footer section ends  -->
 </body>
 </html>
