make the product card sectino and using api to dynamically show them

--- a/index.html
+++ b/index.html
@@ -124,43 +124,23 @@
   <div class="grid grid-cols-1 md:grid-cols-3 gap-6 max-w-6xl mx-auto" id="tredProducts">
  </section>
 <!-- trending now section ends -->
+  <section class="hidden flex flex-wrap justify-center" id="catagorey-btn">
+
+ </section>
+<!-- products-card-grid starts -->
+<section class="hidden" id="products-card-grid" >
+ 
+<div class="bg-gray-100 p-8 min-h-screen">
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-6 max-w-6xl mx-auto" id="products">
+  </div>
+</div>
+</section>
+<!-- products-card-grid ends -->
 
 <!-- footer section starts  -->
 
 <footer class="bg-slate-900 text-gray-400 flex flex-col gap-3 p-8 ">
- <!-- <section class="flex flex-col gap-10 lg:flex-row justify-between ">
-  <div>
-   <h3 class="text-indigo-800 font-bold">SwiftCart</h3>
-    <p class="text-[.8rem]">Your one-stop shop for all your fashion and lifestyle needs.Quality products fast delivery and excellent support.</p>
- </div>
-  <div>
-    <ul>QUICK LINKS
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Products</a> </li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Contacts</a></li>
-    </ul>
-  </div>
-  <div>
-    <ul>
-    <a href="#">SUPPORT</a>
-    <li><a href="#">FAQ</a> </li>
-    <li><a href="#">Shipping</a></li>
-    <li><a href="#">Returns</a></li>
-    <li><a href="#">Privacy Policy</a></li>
-    </ul>
-  
-  </div>
-  <div>
-    <h3>SUBSCRIBE TO OUR NEWSLETTER</h3>
-    <p class="text-[.8rem]">The latest news,articles and resources sent to your inbox weekly.</p>
-    <div class="flex flex-col gap-3">
-      <input class="bg-amber-100 text-gray-900" type="email" placeholder="Enter your email" id="user-email">
-      <button class="btn btn-primary">Subscribe</button>
-    </div>
-  </div>
- </section> -->
-<section class="flex flex-col lg:flex-row justify-between gap-3">
+  <section class="flex flex-col lg:flex-row justify-between gap-3">
   
   <div class="max-w-xs">
     <h3 class="text-indigo-500 font-bold text-2xl mb-4">SwiftCart</h3>
@@ -206,10 +186,7 @@
     </div>
   </div>
 
-</section>
-
-
-
+  </section>
   <hr>
   <div class="flex flex-col-reverse lg:flex-row lg:justify-between">
     <p>&copy; 2025 SwiftCraft, Inc. All rights reserved</p>
@@ -223,5 +200,7 @@
   </div>
 </footer>
 <!-- footer section ends  -->
+
+<script src="./index.js"></script>
 </body>
 </html>
