--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SwiftCraft</title>
   <!-- favicon -->
-   <link rel="shortcut icon" href="./mission-restart-a6-main/Assets/swift-craft.png" type="image/x-icon">
+   <link rel="shortcut icon" href="mission-restart-a6-main/Assets/dolly.png" type="image/x-icon">
  
 <!-- font awesome cdn -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
